--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.24.0",
+    "@codemirror/lang-html": "^6.4.9",
     "@hookform/resolvers": "^3.9.0",
     "@next/swc-wasm-nodejs": "13.5.1",
     "@radix-ui/react-accordion": "^1.2.0",
@@ -42,6 +43,7 @@
     "@types/node": "20.6.2",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
+    "@uiw/react-codemirror": "^4.24.0",
     "autoprefixer": "10.4.15",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -52,6 +54,7 @@
     "eslint-config-next": "13.5.1",
     "html-react-parser": "^5.2.5",
     "input-otp": "^1.2.4",
+    "js-beautify": "^1.15.4",
     "lucide-react": "^0.446.0",
     "next": "^15.3.5",
     "next-themes": "^0.3.0",
@@ -71,5 +74,8 @@
     "vaul": "^0.9.9",
     "zod": "^3.23.8",
     "zustand": "^5.0.6"
+  },
+  "devDependencies": {
+    "@types/js-beautify": "^1.14.3"
   }
 }
